[project]
name = "gmail-cli"
version = "0.1.0"
description = "Gmail CLI sender tool using OAuth2 authentication for sending emails via Gmail API"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "google-api-python-client",
    "google-auth",
    "google-auth-oauthlib",
    "google-auth-httplib2",
    "click",
    "markdown",
    "Pygments",
]
